--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "devDependencies": {
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "husky": "^8.0.0"
   },
   "dependencies": {
     "ts-node": "^10.9.1"
@@ -25,7 +28,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./src/tests/*.spec.ts"
+    "test": "mocha ./src/tests/*.spec.ts",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC"
