--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "chai": "^4.3.7",
     "commitizen": "^4.3.0",
     "cz-customizable": "^6.3.0",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
     "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
     "standard-version": "^9.5.0",
+    "ts-loader": "^9.4.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
