--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "husky": "^8.0.0",
     "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
+    "nyc": "^15.1.0",
     "standard-version": "^9.5.0",
     "ts-loader": "^9.4.2",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "ts-node": "^10.9.1"
@@ -31,10 +33,11 @@
   },
   "name": "vue2-study",
   "description": "<!--\r  * @Author: 蓝胖子007 1829390613@qq.com\r  * @Date: 2023-02-09 20:35:44\r  * @LastEditors: 蓝胖子007 1829390613@qq.com\r  * @LastEditTime: 2023-02-10 12:22:42\r  * @FilePath: \\vue\\vue2\\README.md\r  * @Description: \r  * \r  * Copyright (c) 2023 by ${git_name_email}, All Rights Reserved. \r -->\r **测试**",
-  "version": "1.15.0",
+  "version": "1.16.0",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./src/tests/*.spec.ts",
+    "test": "nyc mocha ./src/tests/*.spec.ts",
+    "test:brower": "webpack-dev-server",
     "prepare": "husky install",
     "cz": "git-cz",
     "update:log": "standard-version"
