--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "@commitlint/cz-commitlint": "^17.4.2",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "chai": "^4.3.7",
     "commitizen": "^4.3.0",
     "cz-customizable": "^6.3.0",
+    "eslint": "^8.34.0",
+    "eslint-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
     "mocha": "^10.2.0",
