--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@commitlint/cz-commitlint": "^17.4.2",
     "@types/chai": "^4.3.4",
+    "@types/jsdom": "^21.1.0",
     "@types/mocha": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
@@ -14,7 +15,10 @@
     "eslint-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
+    "jsdom": "^21.1.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^10.2.0",
+    "mocha-jsdom": "^2.0.0",
     "mochawesome": "^7.1.3",
     "nyc": "^15.1.0",
     "standard-version": "^9.5.0",
@@ -29,7 +33,8 @@
   "mocha": {
     "colors": true,
     "require": [
-      "ts-node/register"
+      "ts-node/register",
+      "jsdom-global/register"
     ],
     "reporter": [
       "mochawesome"
