--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,17 +9,14 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "启动程序",
-      // "skipFiles": [
-      //   "<node_internals>/**"
-      // ],
+      // 调试的名字
+      "name": "observicer测试调试",
+      // debug调试执行的命令
       "program": "${workspaceFolder}\\node_modules\\mocha\\bin\\_mocha",
+      // 传给program执行命令的参数
       "args": [
         "./src/tests/observice.spec.ts"
       ]
-      // "outFiles": [
-      //   "${workspaceFolder}/**/*.js"
-      // ]
     }
   ]
 }
