--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
               * 表示任意文件
       "exclude" 不需要被编译的文件目录
           默认值：["node_modules", "bower_components", "jspm_packages"]
-  
+
   */
     "include": [
       "./src/**/*"
@@ -14,12 +14,12 @@
   //  "exclude": [
   //    "./src/hello/**/*"
   //  ]
-  
+
     /*
       compilerOptions 编译器的选项
     */
     "compilerOptions": {
-  
+
       // target 用来指定ts被编译为的ES的版本
       // 'es3', 'es5', 'es6', 'es2015', 'es2016', 'es2017', 'es2018', 'es2019', 'es2020', 'esnext'
       "target": "es2015",
@@ -35,45 +35,47 @@
       //es2018.regexp', 'es2019.array', 'es2019.object', 'es2019.string', 'es2019.symbol', 'es2020.bigint', 'es2020.promise', 'es2020.s
       //haredmemory', 'es2020.string', 'es2020.symbol.wellknown', 'es2020.intl', 'esnext.array', 'esnext.symbol', 'esnext.asynciterable
       //', 'esnext.intl', 'esnext.bigint', 'esnext.string', 'esnext.promise', 'esnext.weakref'
-    "lib": ["es6", "dom"],
-  
-  
+      "lib": ["es6", "dom"],
+
+
       // outDir 用来指定编译后文件所在的目录
     "outDir": "./dist",
-  
+
       // 将代码合并为一个文件
       // 设置outFile后，所有的全局作用域中的代码会合并到同一个文件中
       //"outFile": "./dist/app.js"
-  
+
+      // "noImplicitAny": false,
+    // "noImplicitThis": false,
       // 是否对js文件进行编译，默认是false
-  //    "allowJs": true,
+    "allowJs": true,
       // 是否检查js代码是否符合语法规范，默认是false
   //    "checkJs": true,
       // 是否移除注释
       "removeComments": true,
       // 不生成编译后的文件
       "noEmit": false,
-  
-  
+
+
       // 当有错误时不生成编译后的文件
       "noEmitOnError": true,
-  
+
       // 所有严格检查的总开关
       "strict": true,
-  
+
       // 用来设置编译后的文件是否使用严格模式，默认false
       "alwaysStrict": true,
-  
-      // 不允许隐式的any类型
-      "noImplicitAny": true,
-  
-      // 不允许不明确类型的this
-      "noImplicitThis": true,
-  
+
+      // 不允许隐式的any类型,既：如下：参数 xx 隐式具有“any”类型不会报错了
+      "noImplicitAny": false,
+
+      // 不允许不明确类型的this,
+      "noImplicitThis": false,
+
       // 严格的检查空值
       "strictNullChecks": true
-  
-  
+
+
     }
   }
 
