--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
       "program": "${workspaceFolder}\\node_modules\\mocha\\bin\\_mocha",
       // 传给program执行命令的参数
       "args": [
-        "./src/tests/observice.spec.ts"
+        "./src/tests/observer.spec.ts"
       ]
     }
   ]
