feat: 优化git st sel，增加show 和 show -p的选项

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,7 @@
   "configurations": [
 
 
+
     {
       "type": "node",
       "request": "launch",
@@ -27,6 +28,7 @@
       "runtimeExecutable": "C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe", // 改成您的 Chrome 安装路径
       // "sourceMaps": true,
       "webRoot": "${workspaceRoot}",
+      // 调试前使用webpack进行构建
       "preLaunchTask":"build:debugger:chrome",
       // "userDataDir": "${tmpdir}",
       "port": 5433
